# RoadOps

./: README.md
Challenges/Casper/incidentcounter/: README.md
Challenges/Leica-Hexagon/captivate_simulator/: README.adoc
Challenges/SwissReMicrosoft/ExtendedReality-LiveStream/: Microsoft.MixedReality.WebRTC.sln  README.md
Challenges/Velas/Velas-for-Emergency-Services/: README.md
Challenges/Velas/VelasInformationExplorer/: Dockerfile  README.md
Challenges/Velas/VelasMultiCurrencyWalletforEmergency/: .gitignore  Dockerfile.main  README.md  api.ls  autodetect-lang.ls  calc-amount.js  calc-certain-wallet.ls  calc-wallet.ls  copied-inform.ls  copied-pk-inform.ls  copy-message.ls  copy.ls  get-lang.ls  get-market-coins-history.ls  get-primary-info.ls  history-funcs.ls  icons.ls  install-plugin.js  install-plugin.ls  invoice-funcs.ls  main.ls  (+23 more)
Chronos/cronossmartcontract1/: README.MD  package.json
Chronos/cronossmartcontract2/: README.md
Pyth-Oracle-Solana-NFT/: .gitignore  .pubkey  Anchor.toml  LICENSE  README.md  copyIdl.js  package-lock.json  package.json
Pyth-Oracle-Solana-NFT/app/: package.json
Pyth-Oracle-Solana-NFT/programs/pythaplex/: Cargo.toml
Pyth-Oracle-Solana-NFT/programs/pythaplex/src/: lib.rs
Pyth-Oracle-Solana-NFT/tests/: pythaplex.js
dev/Algorand-nft-subscription-contracts/: .gitignore  LICENSE  README.md  requirements.txt
expert-ai-nlp/: document.txt
solana-wallet-dao-mgmt/elusiv-solana-private-pay/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
solana-wallet-dao-mgmt/web3-auth-solana-wallet/: README.md
(+544 files in other folders)
